--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "@types/jest": "29.4.0",
     "eslint": "^8.47.0",
     "jest": "29.5.0"
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.2.3"
   }
 }
