--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
-    "format": "prettier --write '**/*.{js,json,html,css}'"
+    "format": "prettier --write '**/*.{js,json,html,css}'",
+    "start": "node ./scripts/run_project.js"
   },
   "devDependencies": {
     "@oracle/suitecloud-unit-testing": "^1.3.1",
